# api-queue

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: settings.py  test_settings.py  urls.py
docker/: entrypoint.sh
scoring/: models.py  serializers.py  urls.py  views.py
scoring/management/commands/: train_model.py
scoring/migrations/: 0001_initial.py
scoring/ml/: service.py
scripts/: test.sh
tests/: test_async_capable_api_view.py  test_docs_endpoints.py  test_score_endpoint.py  test_score_serializer.py  test_train_endpoint.py
